--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "install": "^0.10.1",
     "native-base": "^2.1.4",
+    "navigator": "^1.0.1",
     "npm": "^4.6.1",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
-    "react-native-vector-icons": "^4.1.1"
+    "react-native-vector-icons": "^4.1.1",
+    "react-navigation": "^1.0.0-beta.11"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
